---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 25. 01. 2026
  Bugfixes:
    - Fixed incorrect API usage for prototype checking (was causing crashes on research completion)
  Changes:
    - Added preservation of entity tags and labels for mod compatibility
    - Now raises script_raised_built events after replacement so other mods can react
    - Added comprehensive remote interface for mod developers
    - Added warning messages if turret upgrade fails
    - Enhanced Space Age compatibility with better science pack detection
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 25. 01. 2026
  Bugfixes:
    - Fixed circuit network connections being lost when turrets are upgraded
    - Fixed control behavior settings (circuit conditions, logistic conditions) not being preserved
    - Fixed target selection settings (force_attack_parameters) not being retained after upgrade
  Changes:
    - Improved turret state preservation to be more compatible with other mods that add custom properties
    - Turret swapping now uses fast_replace mechanism (like upgrading assembling machines) for more reliable state transfer
    - Significantly simplified code by leveraging Factorio's built-in upgrade system
    - Turret replacement now safer - won't lose turrets if replacement fails
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 23. 01. 2026
  Bugfixes:
    - Fixed turrets losing quality tier when upgraded by research or when placed with research completed
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 14. 01. 2026
  Changes:
    - Added safety check in case quality is disabled
---------------------------------------------------------------------------------------------------
Version: 1.0.1